refactor and improvements: - Completely remove the global user management using global roles - Users now own workspace and manage its members independently - Can invite and collaborate with users - Remove scoped counters and numbers for workspace -  Replace Long Ids with UUID for entities